# OclExample

./: .gitmodules  CMakeLists.txt
src/: Ocl.cpp  Ocl2.cpp  Ocl3.cpp  Ocl4.cpp
